--- a/.github/workflows/SSLCheck.yml
+++ b/.github/workflows/SSLCheck.yml
@@ -1,4 +1,4 @@
-name: ChenYFanのSSLCheck
+name: SSLCheck
 
 on: 
   push:
@@ -29,16 +29,15 @@ jobs:
     - name: Install & Build
       run: |
         npm i
-        git clone https://github.com/ChenYFan/CheckSSL --depth=2
         npm run build
         cd CheckSSL
         chmod +x checker.sh
-        ./checker.sh blog.cyfan.top cyfan.top status.cyfan.top tools.cyfan.top so.cyfan.top www.cyfan.top api.cyfan.top pan.cyfan.top cdn.cyfan.top ssl.cyfan.top pixiv.cyfan.top pixiv-img.cyfan.top
+        ./checker.sh mhuig.top
         cp -rf ./output/ct.json ../public/ct.json
-        echo "ssl.cyfan.top" > ../public/CNAME
+        echo "ssl.mhuig.top" > ../public/CNAME
         
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./public
