--- a/.github/workflows/SSLCheck.yml
+++ b/.github/workflows/SSLCheck.yml
@@ -26,7 +26,7 @@ jobs:
         npm run build
         cd CheckSSL
         chmod +x checker.sh
-        ./checker.sh mhuig.top
+        ./checker.sh mhuig.top blog.mhuig.top friends.mhuig.top ssl.mhuig.top
         cp -rf ./output/ct.json ../public/ct.json
         echo "ssl.mhuig.top" > ../public/CNAME
         
@@ -35,3 +35,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./public
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
